Import of DJBERG/Set-Array-0.09 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.09
gitpan-cpan-path:         DJBERG/Set-Array-0.09.tar.gz
gitpan-cpan-author:       DJBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -60,3 +60,9 @@ Revision history for Perl extension Set::Array.
         - Added the beginnings of a test suite
         - Fixed a major bug in the 'delete_at()' method (oops)
         - Renamed 'empty()' method to 'is_empty()'
+
+0.09  Fir Jun 21 11:22:00 2002
+        - bag() method calling context issue fixed
+        - The intersection() method (taken from the Cookbook) was broken.
+	  It has been fixed.  Thanks to James Keenan for the spot.
+	- Some minor POD fixes.
