Import of RSAVAGE/Set-Array-0.16 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.16
gitpan-cpan-path:         RSAVAGE/Set-Array-0.16.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changes.txt
+++ b/Changes.txt
@@ -1,5 +1,8 @@
 Revision history for Perl extension Set::Array.
 
+0.16  Fri Jul 25 09:28:00 2008
+	  - Arrrrgggggghhhhh. Patch t/test.t, to change the version number
+
 0.15  Tue Jul 22 10:55:00 2008
 	  - Patch sub intersection to fix RT#29871. Add corresponding test
 	  - Rename Changes to Changes.txt to match my other modules
