--- a/Changes.txt
+++ b/Changes.txt
@@ -1,5 +1,18 @@
 Revision history for Perl extension Set::Array.
 
+0.18  Wed Nov  5 09:45:00 2008
+	  - Patch sub indices() to accept more than 1 digit at each end of the range.
+	  	Hence not just '0..9', but now '0..99', '0..99999', etc are all supported.
+		Thanx to Georg Kipka for pointing out this problem
+	  - I (Ron) found the same problem in the code for sub fill(). Also, the docs for
+		fill() mistakenly used '3-5' as an example, instead of '3..5'
+	  - Clean up the documentation generally, particularly the as_hash() method
+	  - Document that the to_hash() method is an alias for as_hash()
+	  - Document that the symm_diff() method is an alias for symmetric_difference()
+	  - Fix documentation for join($string), which used to say join($char)
+	  - Add new tests for as_hash(), fill() and indices()
+	  - Add Test::Deep to Build.PL and Makefile.PL, to support new tests for as_hash()
+
 0.17  Fri Jul 25 09:40:00 2008
 	  - Patch sub intersection again to properly handle 0 as a member of a set
 
