--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl extension Set::Array.
 
+0.25  Fri Mar  9 16:58:00 2012
+	- Add Try::Tiny to pre-reqs. Add attributes, overload, strict, subs and warnings too.
+
 0.24  Wed mar  7 11:52:00 2012
 	- Due to bugs in Want's want('OBJECT') and wantref(), I used Try::Tiny to capture a call to want('OBJECT') in sub difference().
 	  If an error is thrown, I just ignore it. So, to get what's probably the expected result, see the sample code in the docs for difference().
